# metafider

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cpp
src/config/: ConfigLoader.cpp  ConfigLoader.h
src/heuristics/: Heuristics.cpp  Heuristics.h
src/io_manager/: IOManager.cpp  IOManager.h
src/iomanager/: IOManager.cpp  IOManager.h
src/metadata_parser/: MetadataParser.cpp  MetadataParser.h
src/metafider_app/: MetafiderApp.cpp  MetafiderApp.h
